@@ -1,3 +1,10 @@
+2011-06-04  Kevin Ollivier  <kevino@theolliviers.com>
+
+        [wx] Unreviewed build fix. Restore the PPC build and allow users to specify architectures
+        to build on Mac.
+
+        * wtf/Platform.h:
+
 2011-06-04  Gustavo Noronha Silva  <gns@gnome.org>
 
         Unreviewed, MIPS build fix.
