@@ -1,3 +1,10 @@
+2011-06-04  Kevin Ollivier  <kevino@theolliviers.com>
+
+        [wx] Unreviewed build fix. Restore the PPC build and allow users to specify architectures
+        to build on Mac.
+
+        * wscript:
+
 2011-06-04  Adam Barth  <abarth@webkit.org>
 
         Configure new commit-queue instance.  (Please ignore.)
